// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match snapshot with hint text supplied 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <fieldset
          aria-describedby="contact-methods-hint"
          class="fieldset"
        >
          <legend
            class="fieldset__legend"
          >
            How would you like to be contacted?
          </legend>
          <p
            class="fieldset__hint"
            id="contact-methods-hint"
          >
            This is a hint to appear.
          </p>
          <div
            class="checkbox-group"
            data-component="checkbox-group"
            role="group"
          >
            <div
              class="checkbox-group__item"
            >
              <input
                aria-describedby="contact-methods-hint"
                class="checkbox-group__item__input"
                id="contact-methods_email"
                name="contact-methods"
                type="checkbox"
                value="email"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_email"
              >
                Email
              </label>
            </div>
            <div
              class="checkbox-group__item"
            >
              <input
                aria-describedby="contact-methods-hint"
                class="checkbox-group__item__input"
                id="contact-methods_telephone"
                name="contact-methods"
                type="checkbox"
                value="telephone"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_telephone"
              >
                Telephone
              </label>
            </div>
            <div
              class="checkbox-group__item"
            >
              <input
                aria-describedby="contact-methods-hint"
                class="checkbox-group__item__input"
                id="contact-methods_text-message"
                name="contact-methods"
                type="checkbox"
                value="text-message"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_text-message"
              >
                Text message
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <fieldset
        aria-describedby="contact-methods-hint"
        class="fieldset"
      >
        <legend
          class="fieldset__legend"
        >
          How would you like to be contacted?
        </legend>
        <p
          class="fieldset__hint"
          id="contact-methods-hint"
        >
          This is a hint to appear.
        </p>
        <div
          class="checkbox-group"
          data-component="checkbox-group"
          role="group"
        >
          <div
            class="checkbox-group__item"
          >
            <input
              aria-describedby="contact-methods-hint"
              class="checkbox-group__item__input"
              id="contact-methods_email"
              name="contact-methods"
              type="checkbox"
              value="email"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_email"
            >
              Email
            </label>
          </div>
          <div
            class="checkbox-group__item"
          >
            <input
              aria-describedby="contact-methods-hint"
              class="checkbox-group__item__input"
              id="contact-methods_telephone"
              name="contact-methods"
              type="checkbox"
              value="telephone"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_telephone"
            >
              Telephone
            </label>
          </div>
          <div
            class="checkbox-group__item"
          >
            <input
              aria-describedby="contact-methods-hint"
              class="checkbox-group__item__input"
              id="contact-methods_text-message"
              name="contact-methods"
              type="checkbox"
              value="text-message"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_text-message"
            >
              Text message
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Checkbox should match snapshot with some default attributes 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="form-group"
      >
        <fieldset
          class="fieldset"
        >
          <legend
            class="fieldset__legend"
          >
            How would you like to be contacted?
          </legend>
          <div
            class="checkbox-group"
            data-component="checkbox-group"
            role="group"
          >
            <div
              class="checkbox-group__item"
            >
              <input
                class="checkbox-group__item__input"
                id="contact-methods_email"
                name="contact-methods"
                type="checkbox"
                value="email"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_email"
              >
                Email
              </label>
            </div>
            <div
              class="checkbox-group__item"
            >
              <input
                class="checkbox-group__item__input"
                id="contact-methods_telephone"
                name="contact-methods"
                type="checkbox"
                value="telephone"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_telephone"
              >
                Telephone
              </label>
            </div>
            <div
              class="checkbox-group__item"
            >
              <input
                class="checkbox-group__item__input"
                id="contact-methods_text-message"
                name="contact-methods"
                type="checkbox"
                value="text-message"
              />
              <label
                class="checkbox-group__item__label"
                for="contact-methods_text-message"
              >
                Text message
              </label>
            </div>
          </div>
        </fieldset>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="form-group"
    >
      <fieldset
        class="fieldset"
      >
        <legend
          class="fieldset__legend"
        >
          How would you like to be contacted?
        </legend>
        <div
          class="checkbox-group"
          data-component="checkbox-group"
          role="group"
        >
          <div
            class="checkbox-group__item"
          >
            <input
              class="checkbox-group__item__input"
              id="contact-methods_email"
              name="contact-methods"
              type="checkbox"
              value="email"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_email"
            >
              Email
            </label>
          </div>
          <div
            class="checkbox-group__item"
          >
            <input
              class="checkbox-group__item__input"
              id="contact-methods_telephone"
              name="contact-methods"
              type="checkbox"
              value="telephone"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_telephone"
            >
              Telephone
            </label>
          </div>
          <div
            class="checkbox-group__item"
          >
            <input
              class="checkbox-group__item__input"
              id="contact-methods_text-message"
              name="contact-methods"
              type="checkbox"
              value="text-message"
            />
            <label
              class="checkbox-group__item__label"
              for="contact-methods_text-message"
            >
              Text message
            </label>
          </div>
        </div>
      </fieldset>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
